[project]
name = "bitnami-secure-charts"
version = "0.1.0"
description = "Mirror free Bitnami Secure OCI charts and images into a pinned Docker Hub namespace."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.scripts]
bitnami-secure-charts = "bitnami_secure_charts.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

